Logs out max and min of values to the console

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="/CountUpAndDown.js"></script>
     <script src="/printAllPairs.js"></script>
     <script src="/logAtLeastFive(5).js"></script>
+    <script src="/logAtMostFive.js"></script>
     
 </body>
 </html>
