--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="/printAllPairs.js"></script>
     <script src="/logAtLeastFive(5).js"></script>
     <script src="/logAtMostFive.js"></script>
+    <script src="/sumSpaceComplexity.js"></script>
+    <script src="/doubleSpaceComlexity.js"></script>
     
 </body>
 </html>
