Websocket communication in the client and server site semaltaneously

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="/logAtMostFive.js"></script>
     <script src="/sumSpaceComplexity.js"></script>
     <script src="/doubleSpaceComlexity.js"></script>
+    <script src="/howidonode.js"></script>
+    <script src="/websocket.js"></script>
     
 </body>
 </html>
